# mnist-trainer

./: Cargo.toml  README.md
src/: activations.rs  config.rs  core.rs  dataset.rs  gui.rs  lib.rs  losses.rs  main.rs  training.rs
src/data/: dataset.rs  loader.rs  mod.rs
src/metrics/: accuracy.rs
src/network/: activation.rs  layer.rs  mod.rs  neuron.rs
src/neural_network/: mlp.rs
src/training/: trainer.rs
src/utils/: math.rs
