[package]
name = "neural_net"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.39"
eframe = "0.30.0"
egui = "0.30.0"
egui_plot = "0.30.0"
env_logger = "0.11.6"
log = "0.4.22"
mnist = "0.6.0"
ndarray = {version = "0.16.1", features = ["serde"]}
ndarray-rand = "0.15.0"
rand = "0.8.5"
serde = {version = "1.0.217", features = ["derive"]}
serde_json = "1.0.134"
